src/commands/run/snapshots/ralph_wiggum__commands__run__event_formatting__tests__snapshot_format_event_ask_user_question_and_answer.snap
---
source: src/commands/run/event_formatting.rs
expression: output
---
Line 0: [Rgb(137, 180, 250)]▍[Rgb(137, 180, 250),BOLD]Claude
Line 1: [Rgb(137, 180, 250)]▍[Reset]How are you?
Line 2: [empty]
Line 3: [Rgb(203, 166, 247)]▍[Rgb(203, 166, 247),BOLD]You
Line 4: [Rgb(203, 166, 247)]▍[Reset]I'm doing great!
