src/commands/run/snapshots/ralph_wiggum__commands__run__event_formatting__tests__snapshot_format_event_assistant_text_markdown.snap
---
source: src/commands/run/event_formatting.rs
expression: output
---
Line 0: [Rgb(137, 180, 250)]▍[Rgb(137, 180, 250),BOLD]Claude
Line 1: [Rgb(137, 180, 250)]▍[Reset]                                    [Indexed(14),BOLD]Heading
Line 2: [Rgb(137, 180, 250)]▍
Line 3: [Rgb(137, 180, 250)]▍[Reset]Some [Indexed(15),BOLD]bold[Reset] and [Indexed(7),ITALIC]italic[Reset] text.
Line 4: [Rgb(137, 180, 250)]▍
Line 5: [Rgb(137, 180, 250)]▍[Reset]- List item 1
Line 6: [Rgb(137, 180, 250)]▍[Reset]- List item 2
