src/commands/run/snapshots/ralph_wiggum__commands__run__event_formatting__tests__snapshot_format_event_assistant_text_plain.snap
---
source: src/commands/run/event_formatting.rs
expression: output
---
Line 0: [Rgb(137, 180, 250)]▍[Rgb(137, 180, 250),BOLD]Claude
Line 1: [Rgb(137, 180, 250)]▍[Reset]Hello, this is a plain text response.
