src/commands/run/snapshots/ralph_wiggum__commands__run__event_formatting__tests__snapshot_format_event_assistant_thinking.snap
---
source: src/commands/run/event_formatting.rs
expression: output
---
Line 0: [Rgb(108, 112, 134)]▍[Rgb(108, 112, 134),ITALIC]Let me think about this.
Line 1: [Rgb(108, 112, 134)]▍[Rgb(108, 112, 134),ITALIC]I need to consider multiple factors.
