src/commands/run/snapshots/ralph_wiggum__commands__run__event_formatting__tests__snapshot_format_event_tool_use_write.snap
---
source: src/commands/run/event_formatting.rs
expression: output
---
Line 0: [Rgb(108, 112, 134)]▍[BOLD]Write: /tmp/output.txt
