src/commands/run/snapshots/ralph_wiggum__commands__run__event_formatting__tests__snapshot_format_event_user_with_ask_user_result.snap
---
source: src/commands/run/event_formatting.rs
expression: output
---
Line 0: [Rgb(203, 166, 247)]▍[Rgb(203, 166, 247),BOLD]You
Line 1: [Rgb(203, 166, 247)]▍[Reset]User answered: [Rgb(205, 214, 244),BOLD]Yes, proceed
